demo/konvoy/demo-virtual-event/v1/webapp/04-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp
  namespace: webapp
  labels:
    app: webapp
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    traefik.frontend.passHostHeader: 'true'
    traefik.ingress.kubernetes.io/rule-type: 'PathPrefixStrip'
spec:
  rules:
  - http:
      paths:
      - path: /webapp
        backend:
          serviceName: webapp
          servicePort: 80
